--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <nav>
           <ul>
             <li>
-              <a href="#">Hébergement</a>
+              <a href="#hebergement">Hébergement</a>
             </li>
             <li>
-              <a href="#">Activités</a>
+              <a href="#activites">Activités</a>
             </li>
           </ul>
         </nav>
@@ -50,29 +50,36 @@
                 value="Marseille,France"
                 class="champ-de-saisie-bar"
               />
-              <button class="bouton-rechercher">Rechercher</button>
+
+              <i class="fa-solid fa-magnifying-glass"></i>
+
+              <button class="bouton-rechercher">
+                <i class="fa-solid fa-magnifying-glass"></i>Rechercher
+              </button>
             </form>
           </div>
 
           <div class="filtres">
             <h2>Filtres</h2>
-            <button class="carte-filtres">
-              <i class="fa-solid fa-money-bill-wave"></i>
-              Economique
-            </button>
-            <button class="carte-filtres">
-              <i class="fa-solid fa-person"></i>
-              Familial
-            </button>
+            <div class="filtres-buttons">
+              <button class="carte-filtres">
+                <i class="fa-solid fa-money-bill-wave"></i>
+                Économique
+              </button>
+              <button class="carte-filtres">
+                <i class="fa-solid fa-person"></i>
+                Familial
+              </button>
 
-            <button class="carte-filtres">
-              <i class="fa-solid fa-heart"></i>
-              Romantique
-            </button>
-            <button class="carte-filtres">
-              <i class="fa-solid fa-fire"></i>
-              Nos pépites
-            </button>
+              <button class="carte-filtres">
+                <i class="fa-solid fa-heart"></i>
+                Romantique
+              </button>
+              <button class="carte-filtres">
+                <i class="fa-solid fa-fire"></i>
+                Nos pépites
+              </button>
+            </div>
           </div>
 
           <div class="div-info">
@@ -82,7 +89,7 @@
           </div>
         </div>
         <div class="hebergements-and-populaires">
-          <section class="hebergements">
+          <section class="hebergements" id="hebergement">
             <h2>Hébergement à Marseille</h2>
             <div class="hebergements-card">
               <a href="">
@@ -91,9 +98,9 @@
                     src="./images/hebergements/fred-kleber.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
-                  <div class="card-content">
+                  <div class="card-content-hebergement">
                     <div class="card-txt">
-                      <h4 class="card-title">Hôtel Le soleil du matin</h4>
+                      <h3 class="card-title">Hôtel du port</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
@@ -118,9 +125,9 @@
                     src="./images/hebergements/febrian-zakaria.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
-                  <div class="card-content">
+                  <div class="card-content-hebergement">
                     <div class="card-txt">
-                      <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                      <h3 class="card-title">Hôtel chez Amina</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
@@ -145,9 +152,9 @@
                     src="./images/hebergements/reisetopia.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
-                  <div class="card-content">
+                  <div class="card-content-hebergement">
                     <div class="card-txt">
-                      <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                      <h3 class="card-title">Hôtel Les mouettes</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
@@ -172,9 +179,9 @@
                     src="./images/hebergements/annie-spratt.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
-                  <div class="card-content">
+                  <div class="card-content-hebergement">
                     <div class="card-txt">
-                      <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                      <h3 class="card-title">Hôtel de la mer</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
@@ -199,9 +206,9 @@
                     src="./images/hebergements/marcus-loke.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
-                  <div class="card-content">
+                  <div class="card-content-hebergement">
                     <div class="card-txt">
-                      <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                      <h3 class="card-title">Auberge La Canebière</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
@@ -226,9 +233,9 @@
                     src="./images/hebergements/nicate-lee.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
                   />
-                  <div class="card-content">
+                  <div class="card-content-hebergement">
                     <div class="card-txt">
-                      <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                      <h3 class="card-title">Auberge Le panier</h3>
                       <p class="card-subtitle">
                         Nuit à partir de 128<span class="euro">€</span>
                       </p>
@@ -343,11 +350,11 @@
             </div>
           </section>
         </div>
-        <section class="activites">
+        <section class="activites" id="activites">
           <h2 class="section-title">Activités à Marseille</h2>
           <div class="activites-card">
             <a href="#">
-              <article class="card">
+              <article class="card-activites">
                 <img src="images/activites/reno-laithienne.jpg" alt="" />
                 <div class="card-content">
                   <div class="card-txt">
@@ -357,7 +364,7 @@
               </article>
             </a>
             <a href="#">
-              <article class="card">
+              <article class="card-activites">
                 <img src="images/activites/paul-hermann.jpg" alt="" />
                 <div class="card-content">
                   <div class="card-txt">
@@ -367,7 +374,7 @@
               </article>
             </a>
             <a href="#">
-              <article class="card">
+              <article class="card-activites">
                 <img src="images/activites/kilyan-sockalingum.jpg" alt="" />
                 <div class="card-content">
                   <div class="card-txt">
@@ -377,7 +384,7 @@
               </article>
             </a>
             <a href="#">
-              <article class="card">
+              <article class="card-activites">
                 <img src="images/activites/florian-wehde.jpg" alt="" />
                 <div class="card-content">
                   <div class="card-txt">
@@ -392,19 +399,19 @@
       <footer>
         <div>
           <h3>À propos</h3>
-          <p>Fonctionnement du site</p>
-          <p>Coditions générales</p>
-          <p>Données et confidentialités</p>
+          <a href="#"><p>Fonctionnement du site</p></a>
+          <a href="#"><p>Coditions générales</p></a>
+          <a href="#"><p>Données et confidentialités</p></a>
         </div>
         <div>
           <h3>Nos hebergéments</h3>
-          <p>Charte qualité</p>
-          <p>Proposer votre hôtel</p>
+          <a href="#"> <p>Charte qualité</p></a>
+          <a href="#"><p>Proposer votre hôtel</p></a>
         </div>
         <div>
           <h3>Assistance</h3>
-          <p>Centre d'aides</p>
-          <p>Nous contacter</p>
+          <a href="#"><p>Centre d'aides</p></a>
+          <a href="#"><p>Nous contacter</p></a>
         </div>
       </footer>
     </div>
