--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>En plein centre-ville ou en pleine nature</p>
           </div>
           <div>
-            <form action="" method="get" class="form-search-bar">
+            <form action="#" method="get" class="form-search-bar">
               <button class="button-localisation">
                 <i class="fa-solid fa-location-dot"></i>
               </button>
@@ -102,7 +102,7 @@
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel du port</h3>
                       <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
+                        Nuit à partir de 52<span class="euro">€</span>
                       </p>
                     </div>
                     <div class="card-rating">
@@ -129,7 +129,7 @@
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel chez Amina</h3>
                       <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
+                        Nuit à partir de 96<span class="euro">€</span>
                       </p>
                     </div>
                     <div class="card-rating">
@@ -156,7 +156,7 @@
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel Les mouettes</h3>
                       <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
+                        Nuit à partir de 76<span class="euro">€</span>
                       </p>
                     </div>
                     <div class="card-rating">
@@ -183,7 +183,7 @@
                     <div class="card-txt">
                       <h3 class="card-title">Hôtel de la mer</h3>
                       <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
+                        Nuit à partir de 46<span class="euro">€</span>
                       </p>
                     </div>
                     <div class="card-rating">
@@ -210,7 +210,7 @@
                     <div class="card-txt">
                       <h3 class="card-title">Auberge La Canebière</h3>
                       <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
+                        Nuit à partir de 25<span class="euro">€</span>
                       </p>
                     </div>
                     <div class="card-rating">
@@ -237,7 +237,7 @@
                     <div class="card-txt">
                       <h3 class="card-title">Auberge Le panier</h3>
                       <p class="card-subtitle">
-                        Nuit à partir de 128<span class="euro">€</span>
+                        Nuit à partir de 23<span class="euro">€</span>
                       </p>
                     </div>
                     <div class="card-rating">
@@ -254,9 +254,8 @@
                   </div>
                 </article>
               </a>
-
-              <a href="#" class="afficher-plus">Afficher plus</a>
             </div>
+            <a href="#" class="afficher-plus">Afficher plus</a>
           </section>
           <section class="populaires">
             <div class="populaires-title">
@@ -399,17 +398,20 @@
       <footer>
         <div>
           <h3>À propos</h3>
+
           <a href="#"><p>Fonctionnement du site</p></a>
           <a href="#"><p>Coditions générales</p></a>
           <a href="#"><p>Données et confidentialités</p></a>
         </div>
         <div>
           <h3>Nos hebergéments</h3>
+
           <a href="#"> <p>Charte qualité</p></a>
           <a href="#"><p>Proposer votre hôtel</p></a>
         </div>
-        <div>
+        <div class="assistance-p">
           <h3>Assistance</h3>
+
           <a href="#"><p>Centre d'aides</p></a>
           <a href="#"><p>Nous contacter</p></a>
         </div>
